Added GitUtils and cleaned code